--- a/UsersServiceAndroid/app/src/main/res/values-es/strings.xml
+++ b/UsersServiceAndroid/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,8 @@
     <string name="passwords_not_match_string">Las contraseñas no coinciden</string>
     <string name="write_username_string">Debes escribir un nombre de usuario</string>
     <string name="write_password_string">Debes escribir una contraseña</string>
+    <string name="write_email_string">Debes escribir un email</string>
+    <string name="write_birthdate_string">Debes escribir una fecha de nacimiento</string>
     <string name="write_confirm_password_string">Debes confirmar tu contraseña</string>
     <string name="succesful_register_string">Te has registrado correctamente!</string>
     <string name="error_register_string">Se ha producido un error al intentar registrar el usuario</string>
@@ -21,4 +23,11 @@
     <string name="incorrect_password_string">Contraseña incorrecta</string>
     <string name="error_login_string">Se ha producido un error al intentar iniciar sesión</string>
     <string name="user_not_exists_string">No existe un usuario con ese nombre</string>
+    <string name="username_short_long_string">Tu nombre de usuario debe tener entre 4 y 20 caracteres</string>
+    <string name="password_short_long_string">Tu contraseña debe tener entre 4 y 20 caracteres</string>
+    <string name="email_short_long_string">Tu email debe tener entre 4 y 30 caracteres</string>
+    <string name="too_young_string">Eres demasiado joven para jugar</string>
+    <string name="email_string">Email</string>
+    <string name="birthdate_string">Fecha de nacimiento</string>
+
 </resources>
