--- a/FireFighterAdventure/app/src/main/res/values-es/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values-es/strings.xml
@@ -33,5 +33,7 @@
     <string name="change_password_string">Cambiar contraseña</string>
     <string name="change_email_string">Cambiar email</string>
     <string name="hello_string">Hola</string>
+    <string name="confirm_new_password_string">Confirma tu nueva contrasenya</string>
+    <string name="new_password_string">Nueva contraseña</string>
 
 </resources>
