-> Añadido el fragment ForgottenPasswordFragment. -> Cambiada la estructura del código de todos los fragments. -> Eliminado código innecesario de todos los fragments. -> Centralizadas las variables de conexión HTTP y del retrofit, ahora se declaran una única vez en la MainActivity y son accesibles desde todos los fragments de la app. -> Cambiado el nombre de muchas variables para hacerlas más intuitivas y que todas ellas sigan un mismo patrón.

--- a/FireFighterAdventure/app/src/main/res/values-es/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values-es/strings.xml
@@ -35,5 +35,6 @@
     <string name="hello_string">Hola</string>
     <string name="confirm_new_password_string">Confirma tu nueva contrasenya</string>
     <string name="new_password_string">Nueva contraseña</string>
+    <string name="forgotten_password_string">He olvidado mi contraseña</string>
 
 </resources>
