--- a/FireFighterAdventure/app/src/main/res/values/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="confirm_new_password_string">Confirm new password</string>
     <string name="new_password_string">New password</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="forgotten_password_string">I forgot my password</string>
+    <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
