--- a/FireFighterAdventure/app/src/main/res/values-ca/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values-ca/strings.xml
@@ -35,5 +35,6 @@
     <string name="hello_string">Hola</string>
     <string name="confirm_new_password_string">Confirma la nova contrasenya</string>
     <string name="new_password_string">Nova contrasenya</string>
+    <string name="forgotten_password_string">He oblidat la meva contrasenya</string>
 
 </resources>
