-> Añadidos los fragments FragmentChangeEmail, FragmentConnectionError, FragmentDeleteAccount y FragmentNoInternetConnection. -> El FragmentNoInternetConnection se mostrará después de la Splash Screen para informarnos si no disponemos de una conexión a Internet, ya que para usar la App esto es indispensable. -> El FragmentConnectionError se mostrará después de la Splash Screen para informarnos de que, a pesar de disponer de acceso a Internet, la conexión con el servidor no ha podido establecerse correctamente. -> Se ha continuado con la centralización de variables y/o objetos que pueden ser usados en varios fragments: por ejemplo, la progressBar. Hasta ahora se utilizaba una progressBar distinta en cada fragment en que se cargaban datos del Backend a través de la API, pero a partir de ahora se empleará un único progressBar situado en la MainActivity, el cual podrá ser llamado desde cualquier fragment de la App. -> Ahora, cuando se emplea la progressBar global mencionada en el punto anterior, también se oscurece la pantalla de la App (este efecto desaparece cuando la progressBar desaparece, es decir, cuando se terminan de cargar los datos). -> También se ha centralizado en la MainActivity todo el sistema de guardado del nombre de usuario y contraseña del usuario una vez ha iniciado sesión. Ahora es posible acceder/guardar esos datos desde distintos puntos de la App. Por ejemplo, cuando iniciamos sesión se guardan nuestras credenciales (de modo que la próxima vez que abramos la App accederemos directamente al menú principal sin necesidad de iniciar sesión de nuevo), cuando cerramos sesión se borran las credenciales guardadas y si al abrir la App se intenta iniciar sesión con unas credenciales guardadas que ya no son correctas (porque por ejemplo se ha cambiado la contraseña remotamente desde otro dispositivo) también se borran las credenciales guardadas (pues ya no son correctas). -> Ahora, cuando se pulsa el botón de "Cerrar sesión" del dashboard del menú principal, 

--- a/FireFighterAdventure/app/src/main/res/values-es/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values-es/strings.xml
@@ -33,8 +33,12 @@
     <string name="change_password_string">Cambiar contraseña</string>
     <string name="change_email_string">Cambiar email</string>
     <string name="hello_string">Hola</string>
-    <string name="confirm_new_password_string">Confirma tu nueva contrasenya</string>
+    <string name="confirm_new_password_string">Confirma tu nueva contraseña</string>
     <string name="new_password_string">Nueva contraseña</string>
     <string name="forgotten_password_string">He olvidado mi contraseña</string>
+    <string name="yes_string">Sí</string>
+    <string name="no_string">No</string>
+    <string name="confirm_logout_string">¿Estás seguro de que quieres cerrar sesión?</string>
+    <string name="logout_string">Cerrar sesión</string>
 
 </resources>
