--- a/FireFighterAdventure/app/src/main/res/values-ca/strings.xml
+++ b/FireFighterAdventure/app/src/main/res/values-ca/strings.xml
@@ -36,5 +36,9 @@
     <string name="confirm_new_password_string">Confirma la nova contrasenya</string>
     <string name="new_password_string">Nova contrasenya</string>
     <string name="forgotten_password_string">He oblidat la meva contrasenya</string>
+    <string name="yes_string">Sí</string>
+    <string name="no_string">No</string>
+    <string name="confirm_logout_string">Estàs segur de que vols tancar la sessió?</string>
+    <string name="logout_string">Tanca la sessió</string>
 
 </resources>
