--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="who_we_are_string">Who we are</string>
     <string name="must_confirm_account_deletion_string">You must confirm that you want to delete your account</string>
     <string name="confirm_account_deletion_string">I confirm I want to permanently delete my account</string>
-    <string name="back_string">Back</string>
+    <string name="back_string">⬅️ Back</string>
     <string name="please_enter_your_string">Please, enter your:</string>
     <string name="or_string">or</string>
     <string name="recover_password_string">Recover password</string>
@@ -69,8 +69,35 @@
     <string name="your_position_is_string">Your position in the ranking is</string>
     <string name="email_changed_string">You have changed your email</string>
     <string name="play_string">Play</string>
-    <string name="configuration_string">Configuration</string>
+    <string name="configuration_string">⚙ Configuration</string>
+    <string name="sumaya_string">Sumaya Benali</string>
+    <string name="suhail_string">Suhail Chaib</string>
+    <string name="meritxell_string">Meritxell Hermoso</string>
+    <string name="gerard_string">Gerard Milán</string>
+    <string name="lluis_string">Lluís Expósito</string>
+    <string name="eric_string">Eric Mata</string>
+    <string name="language_string">🗣 Language</string>
+
+    <string name="choose_app_language_string">️‍️Choose app language</string>
+
+    <string name="choose_a_language_string">️‍🗨️ ️Choose a language</string>
+
+    <string name="selected_language_string">Selected language:</string>
+    <string name="logged_out_string">You have logged out</string>
+    <string-array name="app_language">
+        <item>English</item>
+        <item>Catalan</item>
+        <item>Spanish</item>
+    </string-array>
     <!-- TODO: Remove or change this placeholder text -->
-    <!-- TODO: Remove or change this placeholder text -->
+    <string-array name="languages">
+        <item>en</item>
+        <item>ca</item>
+        <item>es</item>
+    </string-array>
+    <string name="search_user_string">Search for a user</string>
+    <string name="write_new_email_string">You must write a new email</string>
+    <string name="emails_do_not_match_string">Emails do not match</string>
+    <string name="write_confirm_new_email">You must confirm your new email</string>
 
 </resources>
