--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Firefighter Adventure</string>
-    <string name="login_string">Inicia sessió</string>
+    <string name="app_name">Minim 2</string>
+    <string name="login_string">Cerca</string>
     <string name="password_string">Contrasenya</string>
     <string name="username_string">Usuari</string>
     <string name="register_string">Registra\'t</string>
@@ -40,9 +40,9 @@
     <string name="confirm_logout_string">Estàs segur de que vols tancar la sessió?</string>
     <string name="logout_string">Tanca la sessió</string>
     <string name="no_internet_connection_string">El teu dispositiu no està connectat a Internet!</string>
-    <string name="you_need_internet_connection_string">Necessites una connexió activa a Internet per poder jugar a Firefighter Adventure</string>
-    <string name="retry_string">Torna-ho a provar</string>
-    <string name="connection_error_string">No s\'ha pogut establir la connexió amb el servidor de Firefighter Adventure</string>
+    <string name="you_need_internet_connection_string">Necessites una connexió activa a Internet per a utilitzar l\'aplicació</string>
+    <string name="retry_string">Reintenta</string>
+    <string name="connection_error_string">No s\'ha pogut establir la connexió amb el servidor</string>
     <string name="confirm_new_email_string">Confirma el nou email</string>
     <string name="new_email_string">Nou email</string>
     <string name="who_we_are_string">Qui som</string>
